--- a/exercicios/ex023/style2.css
+++ b/exercicios/ex023/style2.css
@@ -14,6 +14,13 @@ td, th {
     padding: 10px;
 }
 
+caption {
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 10px;
+    background-color: lightgray;
+}
+
 thead, tfoot {
     background-color: gray;
     color: white;
