--- a/exercicios/ex023/style2.css
+++ b/exercicios/ex023/style2.css
@@ -26,6 +26,10 @@ thead, tfoot {
     color: white;
 }
 
+tbody > tr:nth-child(2n) {
+    background-color: lightgray;
+}
+
 td.num {
     text-align: right;
 }
