--- a/exercicios/ex023/style2.css
+++ b/exercicios/ex023/style2.css
@@ -7,6 +7,7 @@ body {
 table {
     width: 500px;
     border-collapse: collapse;
+    position: relative;
 }
 
 td, th {
@@ -24,6 +25,12 @@ caption {
 thead, tfoot {
     background-color: gray;
     color: white;
+}
+
+thead > tr > th {
+    position: sticky;
+    top: -1px;
+    background-color: gray;
 }
 
 tbody > tr:nth-child(2n) {
